--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -121,6 +121,7 @@ services:
       - '%yosimitso_working_forum.site_title%'
       - '@twig'
       -  '@=container.hasParameter("yosimitso_working_forum.mailer_sender_address") ? parameter("yosimitso_working_forum.mailer_sender_address") : null'
+      -  '@=container.hasParameter("yosimitso_working_forum.mailer_sender_name") ? parameter("yosimitso_working_forum.mailer_sender_name") : null'
 
   Yosimitso\WorkingForumBundle\Event\PostEvent:
     arguments:
