Anonymous if not User is Admin or the subject user is an admin or the subject user is equal to the current user.

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -89,7 +89,7 @@ services:
   Yosimitso\WorkingForumBundle\Twig\Extension\QuoteTwigExtension:
     tags:
       - { name: twig.extension }
-    arguments: ['@doctrine.orm.entity_manager', '@translator']
+    arguments: ['@doctrine.orm.entity_manager', '@translator', '@security.authorization_checker','@security.helper']
 
   Yosimitso\WorkingForumBundle\Twig\Extension\ConfigurationTwigExtension:
     tags:
