--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -11,6 +11,7 @@ services:
       $configFileUpload: '%yosimitso_working_forum.file_upload%'
       $siteTitle: '%yosimitso_working_forum.site_title%'
       $senderAddress: '@=container.hasParameter("yosimitso_working_forum.mailer_sender_address") ? parameter("yosimitso_working_forum.mailer_sender_address") : null'
+      $senderName:  '@=container.hasParameter("yosimitso_working_forum.mailer_sender_name") ? parameter("yosimitso_working_forum.mailer_sender_name") : null'
       $floodLimit: '%yosimitso_working_forum.post_flood_sec%'
       $paramSubscription: '%yosimitso_working_forum.thread_subscription%'
       $themeColor: '%yosimitso_working_forum.theme_color%'
